<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/black"
        tools:context=".fragment.HomeFragment">


        <TextView
            android:id="@+id/text_view_lancamento"
            style="@style/text_view_lancamento"
            android:text="@string/title_lancamento"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_lancamento"
            style="@style/image_lancamento"
            android:layout_marginTop="12dp"
            android:background="@drawable/shape_image_radius"
            android:clipToOutline="true"
            android:src="@drawable/img_auxiliar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_lancamento" />

        <TextView
            android:id="@+id/text_view_title_lancamento"
            style="@style/text_view_title_lancamento"
            android:text="@string/titulo_filme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_lancamento" />

        <TextView
            android:id="@+id/text_view_atores"
            style="@style/text_view_title_atores_lancamento"
            android:text="@string/text_actors"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_title_lancamento" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayout_for_you"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="33dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_atores">

            <TextView
                style="@style/text_view_categoria"
                android:text="@string/para_voce" />

            <TextView
                android:clickable="true"
                android:id="@+id/text_view_view_more_for_you"
                style="@style/text_view_ver_mais"
                android:text="@string/ver_mais"
                android:focusable="true" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_for_you"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_for_you" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="33dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/recycler_view_for_you">

            <TextView
                style="@style/text_view_categoria"
                android:text="@string/action" />

            <TextView
                android:clickable="true"
                android:id="@+id/text_view_view_more_action"
                style="@style/text_view_ver_mais"
                android:text="@string/ver_mais"
                android:focusable="true" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_for_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat_action" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat_drama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="33dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/recycler_view_for_action">

            <TextView
                style="@style/text_view_categoria"
                android:text="@string/drama" />

            <TextView
                android:clickable="true"
                android:id="@+id/text_view_view_more_drama"
                style="@style/text_view_ver_mais"
                android:text="@string/ver_mais"
                android:focusable="true" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_for_drama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat_drama" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>